# -Casper_codequity

./: .gitignore  IMPLEMENTATION_PLAN.md  README.md  lastclaudecht.md
backend/: casper_client.py  main.py  requirements.txt
backend/models/: __init__.py  launchpad.py
backend/routers/: __init__.py  launchpad.py
contracts/: Cargo.toml  README.md
contracts/.cargo/: config.toml
contracts/escrow-vault/: Cargo.toml  Odra.toml
contracts/escrow-vault/src/: lib.rs
contracts/escrow-vault/tests/: lib.rs
contracts/safe-token/: Cargo.toml  Odra.toml  build.rs
contracts/safe-token/src/: lib.rs
contracts/safe-token/tests/: lib.rs
frontend/: .env.local.example  README.md  next.config.ts  package-lock.json  package.json  tailwind.config.ts
frontend/src/: actions.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/dashboard/: layout.tsx  page.tsx
frontend/src/app/dashboard/transactions/: page.tsx
frontend/src/app/sign-in/: page.tsx
frontend/src/app/sign-up/: page.tsx
frontend/src/components/: providers.tsx
frontend/src/components/launchpad/: CreateRoundForm.tsx  EvaluateRoundButton.tsx  MilestoneTracker.tsx  RoundCard.tsx
frontend/src/components/terminal/: icon-rail.tsx  sidebar-context.tsx
frontend/src/lib/: launchpad.ts  supabase.ts
frontend/src/lib/supabase/: server.ts
frontend/src/types/: launchpad.ts
scripts/: debug_deploy.py  deploy_contracts.sh  get_contract_urefs.sh  update_env_urefs.py
supabase/migrations/: 202607010000_add_wallet_pubkey.sql  202607010002_launchpad_tables.sql
(+5 files in other folders)
